refactor: dev/prod 프로파일 분리 #95